--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
+
+
 body {
 	width: 100%;
 	margin: 0 auto;
 	padding: 0;
 	position: relative;
 	text-align: left;
-	background: url(/img/timelinebg.png) repeat-y #FCFCFC;
-	background-size: 100% 100%;
+	background-color:#FCFCFC;
+	/*background: url(/img/timelinebg.png) repeat-y #FCFCFC;*/
+	/*background-size: 100% 100%;*/
 	height: auto;
 
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	text-decoration: none;
 	-webkit-font-smoothing: antialiased;	
@@ -20,7 +23,7 @@ body {
 }
 
 a:link, a:visited, a:active{
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	text-decoration: none;
 	-webkit-font-smoothing: antialiased;	
@@ -40,7 +43,7 @@ a:hover {
 
 
 h1, h2, h3, h4 {
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	text-decoration: none;
 	-webkit-font-smoothing: antialiased;	
@@ -72,7 +75,7 @@ h3 {
 	font-size: 12pt;
 	word-spacing:15px;
 	padding-right: 0;
-	padding-bottom: 5px;
+	padding-bottom: 0px;
 	padding-left: 0;
 	line-height: 20px;
 	margin: 0;
@@ -88,11 +91,13 @@ h4 {
 
 
 header {
-	padding: 30px 200px 30px 60px;
+	padding: 10px;
+	font-family: 'Lato';
+	font-size: 22pt;
 	margin: 0;
 	box-shadow: 0 1px #e2e5e4;
-	background: url(/img/headerbg.png);
-	height: 110px;
+	/*background: url(/img/headerbg.png);*/
+	/*height: 10px;*/
 }
 
 search {
@@ -103,13 +108,15 @@ search {
 }
 
 tags {
-	margin: 0;
-	padding: 0;
-	height: 60px;
-	display: table-cell;
-	width: 1000px;
-	text-align: left;
-	left: 0;
+	position: fixed;
+	/*right:5px;*/
+	/*margin: 0;*/
+	/*padding: 0;*/
+	/*height: 10px;*/
+	/*display: table-cell;*/
+	/*width: 1000px;*/
+	/*text-align: left;*/
+	/*left: 800;*/
 }
 
 account {
@@ -122,33 +129,33 @@ account {
 }
 
 toggleButtons {
-	margin: auto;
-	height: 30px;
+	height: 10px;
 	width: 100%;
 	position: relative;
-	padding: 0;
+	padding: 0px;
+	margin: 0px;
 }
 
-	toggleTimeline {
+	toggleGraph {
 		margin: 0;
-		padding: 10px 10px 0 10px;
+		padding: 0px 20px 0 40px;
 		display: table-cell;
 		text-align: right;
 		cursor: pointer; /*changed this -annelie*/
 	}
-		toggleTimeline:hover {
+		toggleGraph:hover {
 			opacity: 0.5;
 		}
 
-	toggleCluster {
+	toggleSketch {
 		margin: 0;
-		padding: 10px 10px 0 10px;
+		padding: 0px 10px 0 30px;
 		display: table-cell;
 		text-align: left;
 	    cursor: pointer; /*changed this -annelie*/
 	}
 
-		toggleCluster:hover {
+		toggleSketch:hover {
 			opacity: 0.5;
 			padding-top: 15px;
 		}
@@ -156,10 +163,12 @@ toggleButtons {
 
 key {
 	position: fixed;
+	padding-left: 1800;
 	margin: 0;
-	padding: 0;
+	/*padding: 0;*/
 	display: block;
-	bottom-right: 30px;
+	/*margin-left: -100;*/
+	/*bottom-right: 30px;*/
 }
 
 
@@ -329,7 +338,7 @@ specialBar {
 	border-style:none;
 
 	font-size: 10pt;
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	-webkit-font-smoothing: antialiased;	
 	text-rendering: optimizeLegibility;
@@ -353,7 +362,7 @@ specialBar {
 
 	font-size: 12pt;
 	text-transform: uppercase;
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	-webkit-font-smoothing: antialiased;	
 	text-rendering: optimizeLegibility;
@@ -370,7 +379,7 @@ specialBar {
 	background-color: #FFFFFF;
 	border: 1px solid #C8CAC9;
 	font-size: 12pt;
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	-webkit-font-smoothing: antialiased;	
 	text-rendering: optimizeLegibility;
@@ -390,7 +399,7 @@ specialBar {
 
 	font-size: 12pt;
 	text-transform: uppercase;
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	-webkit-font-smoothing: antialiased;	
 	text-rendering: optimizeLegibility;
@@ -415,7 +424,7 @@ specialBar {
 
 	font-size: 12pt;
 	text-transform: uppercase;
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	-webkit-font-smoothing: antialiased;	
 	text-rendering: optimizeLegibility;
