--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,18 @@ a:hover {
 	font-weight: 500;
 }
 
-
+#subtitle{
+		font-family: 'Lato', sans-serif;
+		font-size: 10pt;
+	font-weight: 300;
+	text-decoration: none;
+	-webkit-font-smoothing: antialiased;	
+	text-rendering: optimizeLegibility;
+	margin: 0;
+	padding: 0;
+	color: #000000;
+	letter-spacing: 1pt;
+}
 h1, h2, h3, h4 {
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
@@ -77,7 +88,7 @@ h3 {
 	padding-right: 0;
 	padding-bottom: 0px;
 	padding-left: 0;
-	line-height: 20px;
+	/*line-height: 20px;*/
 	margin: 0;
 }
 
@@ -119,6 +130,7 @@ account {
 
 #click{
 		padding-bottom: 20px;
+		padding-top: 20px;
 }
 
 toggleButtons {
