--- a/css/style.css
+++ b/css/style.css
@@ -111,22 +111,7 @@ header {
 	/*height: 10px;*/
 }
 
-search {
-	display: table-cell;
-	height: 100px;
-	padding: 0 60px 0 0;
-	margin: 0;
-}
 
-
-account {
-	padding: 0;
-	margin: 0;
-	text-align: center;
-	right: 60px;
-	position: fixed;
-	z-index: 1000;
-}
 
 #click{
 		padding-bottom: 20px;
@@ -183,6 +168,7 @@ tags {
 	position: relative;
 	padding-top:5px;
 	padding-bottom:20px;
+	opacity: 0.8;
 /*	padding: 20px 0px 20 0px;
 */}
 		toggleDrive:hover {
